# simulator

./: .pre-commit-config.yaml  README.md  pyproject.toml  sim1.py
src/simulator/: camera.py  main.py  renderer.py  robot.py  world.py
